修改sonar扫描